--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "construct-js": "^1.0.1",
+    "idb": "^8.0.2",
+    "lightgallery": "^2.8.3",
     "lucide-react": "^0.503.0",
     "moment": "^2.30.1",
     "msgpackr": "^1.11.2",
