--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@uidotdev/usehooks": "^2.4.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "comma-number": "^2.1.0",
     "construct-js": "^1.0.1",
     "idb": "^8.0.2",
     "lightgallery": "^2.8.3",
@@ -39,6 +40,7 @@
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
+    "@types/comma-number": "^2.1.2",
     "@types/node": "^20",
     "@types/progress-stream": "^2.0.5",
     "@types/react": "^19",
